0.9.4 (unreleased)
----- 

 - Improved console formatting for lists and dicts
 - Run method returns list of scripts when no argument is given
 - Do not keep mnemonics and private keys in readline history

0.9.3
-----

 - Raise ValueError when attempting to modify non-existant config settings
 - Modify install script
 - Minor bugfixes

0.9.2
-----

 - Add --stable and --dev flags to swap between master and develop branches
 - Better verbosity for check.reverts exception string
 - Config settings are reset when network resets
 - Add default_contract_owner setting

0.9.1
-----

 - Add --always-transact flag for test and coverage
 - Do not show individual methods when contract coverage is 0%
 - Minor bugfixes

0.9.0
-----

 - Initial release